--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+    port: 8080
+    servlet:
+        context-path: /identity
+
 spring:
     datasource:
         url: "jdbc:mysql://localhost:3306/identity-service"
