--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ server:
 
 spring:
     datasource:
-        url: "jdbc:mysql://localhost:3306/identity-service"
+        url: "jdbc:mysql://localhost:3306/identity_service"
         username: root
         password: root
