--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
         url: "jdbc:mysql://localhost:3306/identity_service"
         username: root
         password: root
+
+    jpa:
+        hibernate:
+            ddl-auto: update
+        show-sql: true
